#####################################################################
## FILE: Makefile.am
# AUTHOR: William Stafford Noble, Charles E. Grant
# CREATE DATE: 2003
# PROJECT: Meta-MEME
# COPYRIGHT: 2003, UW
#####################################################################

## Automake uses this file to generate a Makefile

# This Makefile adds known good testing output files to the distribution.

# These files should be included in the distribution
EXTRA_DIST = test.fasta \
  test.consensus.fasta \
  test.nogap.fasta
