## $Id: Makefile.am 1421 2006-11-01 01:15:40Z cegrant $
##
## Process this file with automake to produce Makefile.in
##
## # $Log$
## # Revision 1.3  2005/12/16 21:50:39  nadya
## # always install files in tests/
## #
## # Revision 1.2  2005/08/20 04:13:39  nadya
## # add missing tests results
## #
## # Revision 1.1.1.1  2005/07/31 19:35:29  nadya
## # Importing from meme-3.0.14, and adding configure/make
## #
##

AUTOMAKE_OPTIONS = no-dependencies

DATAFILES = \
	INO_up800.s \
	adh.s \
	crp0.fasta \
	crp0-test.fasta \
	crp0.meme.html \
	crp0.s \
	farntrans5.s \
	lex0.s \
	lipocalin.s \
	lipo.fasta \
	lipo-test.fasta \
	lipo.meme.html \
	mini-drosoph.s \
	noq.s \
	nr.freq \
	nt.freq \
	psp_test.psp \
	psp_test.s \
	sample.meme \
	simple.aln \
	test_tree.txt \
	uprot.freq \
	yeast.nc.1.freq \
	yeast.nc.3.freq \
	yeast.nc.6.freq 

EXTRA_DIST = $(DATAFILES)
