#####################################################################
## FILE: Makefile.am
# AUTHOR: William Stafford Noble, Charles E. Grant
# CREATE DATE: 2003
# PROJECT: Meta-MEME
# COPYRIGHT: 2003, UW
#####################################################################

## Automake uses this file to generate a Makefile

# This Makefile adds known good testing output files to the distribution.

# These files should be included in the distribution
EXTRA_DIST = crp0.complete.fim.gvz \
	crp0.complete.gvz \
	crp0.complete.spacer.gvz \
	crp0.linear.fim.gvz \
	crp0.linear.gvz \
	crp0.linear.spacer.gvz \
	crp0.star.gvz \
	crp0.star.spacer.gvz \
	lipo.complete.fim.gvz \
	lipo.complete.gvz \
	lipo.complete.spacer.gvz \
	lipo.linear.fim.gvz \
	lipo.linear.gvz \
	lipo.linear.spacer.gvz \
	lipo.star.gvz \
	lipo.star.spacer.gvz
