## Process this file with automake to produce Makefile.in

AUTOMAKE_OPTIONS = no-dependencies

DATAFILES = \
	motif.tamo \
	motif.meme \
	seqs.fasta \
	ama.nozscoring.xml \
	ama.withMaxodds.xml \
	ama.zscoring.xml \
	seqs.bg \
	seqs.norc.bg \
	GO2Gene.map.csv \
	gomo.smallthreshold.txt \
	gomo.multipeSpecies.txt  						

EXTRA_DIST = $(DATAFILES)
