## $Id: Makefile.am 1421 2006-11-01 01:15:40Z cegrant $
##
## Process this file with automake to produce Makefile.in
##
## # $Log$
## # Revision 1.3  2005/12/16 21:50:39  nadya
## # always install files in tests/
## #
## # Revision 1.2  2005/08/20 04:13:39  nadya
## # add missing tests results
## #
## # Revision 1.1.1.1  2005/07/31 19:35:29  nadya
## # Importing from meme-3.0.14, and adding configure/make
## #
##

AUTOMAKE_OPTIONS = no-dependencies

DATAFILES = \
	mast.INO_up800.oops \
	mast.INO_up800.tcm \
	mast.INO_up800.zoops \
	mast.adh.oops \
	mast.adh.oops.mini-drosoph.s \
	mast.adh.tcm \
	mast.adh.tcm.mini-drosoph.s \
	mast.adh.zoops \
	mast.adh.zoops.mini-drosoph.s \
	mast.crp0.oops \
	mast.crp0.tcm \
	mast.crp0.zoops \
	mast.farntrans5.oops \
	mast.farntrans5.tcm \
	mast.farntrans5.zoops \
	mast.lipocalin.oops \
	mast.lipocalin.tcm \
	mast.lipocalin.zoops

EXTRA_DIST = $(DATAFILES)
