#####################################################################
## FILE: Makefile.am
# AUTHOR: William Stafford Noble, Charles E. Grant
# CREATE DATE: 2003
# PROJECT: Meta-MEME
# COPYRIGHT: 2003, UW
#####################################################################

## Automake uses this file to generate a Makefile

# This Makefile adds known good testing output files to the distribution.

# These files should be included in the distribution.
DATAFILES = crp0.complete.fim.mhmm \
  crp0.complete.mhmm \
  crp0.complete.spacer.mhmm \
  crp0.linear.fim.mhmm \
  crp0.linear.mhmm \
  crp0.linear.spacer.mhmm \
  crp0.star.mhmm \
  crp0.star.spacer.mhmm \
  lipo.complete.fim.mhmm \
  lipo.complete.mhmm \
  lipo.complete.spacer.mhmm \
  lipo.linear.fim.mhmm \
  lipo.linear.mhmm \
  lipo.linear.spacer.mhmm \
  lipo.star.mhmm \
  lipo.star.spacer.mhmm

EXTRA_DIST = $(DATAFILES)
