#####################################################################
## FILE: Makefile.am
# AUTHOR: William Stafford Noble, Charles E. Grant
# CREATE DATE: 2003
# PROJECT: Meta-MEME
# COPYRIGHT: 2003, UW
#####################################################################

## Automake uses this file to generate a Makefile

# This Makefile adds testing input files to the distribution.

# These files should be included in the distribution.
DATAFILES = crp0.fasta \
  crp0.meme-io \
  crp0.prior \
  lipo.fasta \
  lipo.meme-io \
  lipo.prior

EXTRA_DIST = $(DATAFILES)
